--- a/app/styles/partials/_base.scss
+++ b/app/styles/partials/_base.scss
@@ -4,6 +4,7 @@
 $main-content-width: 60%;
 $main-color: #00796F;
 $friendly-orange: #FF5B26;
+$ocean-blue: #00468C;
 
 $dark-green: #339933;
 $light-grey: #DCDDDD;
