Fix bug in time selection directive.

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -96,7 +96,7 @@
     <div class="share-h">
       <p>下記URLをコピーして参加者に共有してください。</p>
     </div>
-    <input class="share-url" type="text" value="{{event.$url()}}" readonly="readonly">
+    <input class="share-url" type="text" value="{{event.getUrl()}}" readonly="readonly">
     <div class="btn-copy">
       <p>コピー?</p>
     </div>
