Fix confirm page links.

--- a/app/partials/desktop/create-event/confirmation.html
+++ b/app/partials/desktop/create-event/confirmation.html
@@ -44,8 +44,8 @@
   </tr>
   <tr>
   	<td colspan="4">
-  		<div class="fix-event">
-  			<p>イベントを修正する</p>
+  		<div class="fix-event" fast-link ui-sref="^.index">
+  			<p >イベントを修正する</p>
   		</div>
   	</td>
   </tr>
@@ -84,7 +84,7 @@
 
 <div class="gide-arrow"></div>
 
-<div class="goinput">
+<div class="goinput" fast-click="gotoInput()">
   <p>自分の予定を入力する</p>
 </div>
 
