--- a/app/views/desktop/events.html
+++ b/app/views/desktop/events.html
@@ -4,7 +4,7 @@
     <h1 class="events">
       {{event.title}}
     </h1>
-    <div class="events-info" ng-include src='"partials/" + device + "/events/general.html"'></div>
+    <div class="events-info" ng-include src="'partials/' + device + '/events/general.html'"></div>
 
   </div>
 </div>
