--- a/app/partials/mobile/create-event/time-selection.html
+++ b/app/partials/mobile/create-event/time-selection.html
@@ -4,7 +4,7 @@
 
 <div class="time-selection-area">
   <hr class="create-event">
-  <select-time selection-target="possibilities" allow-empty="true"></select-time>
+  <select-time selection-target="possibilities" allow-empty="true" selectable="true"></select-time>
 </div>
 
 <div class="btn-next-link"
