Add scrollpane for modal.

--- a/app/partials/desktop/select-time/main.html
+++ b/app/partials/desktop/select-time/main.html
@@ -6,6 +6,7 @@
 
   <div ng-include src="'partials/desktop/select-time/time-select-control.html'"></div>
 
+  <div class="scroll-pane">
   <ng-switch on="selectable">
     <table class="time-selection {{cssClass}}" selectable-table="" start-column="1" ng-switch-when="true">
       <thead ng-include src="'partials/desktop/select-time/table-head.html'"></thead>
@@ -16,5 +17,6 @@
       <tbody ng-include src="'partials/desktop/select-time/table-body.html'"></tbody>
     </table>
   </ng-switch>
+  </div>
 
 </div>
