--- a/app/styles/partials/_modal.scss
+++ b/app/styles/partials/_modal.scss
@@ -5,6 +5,10 @@
   margin-right: auto;
   background: white;
   border-radius: 10px;
+
+  .scroll-pane {
+    max-height: 400px;
+  }
 }
 
 .input-availabilities {
