Fix select time to allow disabling scrollable option.

--- a/app/partials/desktop/events/availabilities-modal.html
+++ b/app/partials/desktop/events/availabilities-modal.html
@@ -25,7 +25,7 @@
       </td>
     </tr>
   </table>
-  <select-time selection-target="availabilities" allow-empty="true" selectable="true" container-name="timeEditContainer">
+  <select-time selection-target="availabilities" allow-empty="true" selectable="true" container-name="timeEditContainer" scrollable="true">
   </select-time>
 
   <a href="javascript:void(0)" class="close"></a>
