--- a/app/partials/desktop/select-time/table-content.html
+++ b/app/partials/desktop/select-time/table-content.html
@@ -1,3 +1,9 @@
+<tr class="days-of-week">
+  <td></td>
+  <td ng-repeat="dateInfo in dates" ng-click="selectAll(dateInfo)">
+    {{ dateInfo.date | date:'MM/d（EEE曜）' }}
+  </td>
+</tr>
 <tr class="even-time-{{y % 4 < 2}}"
     ng-repeat="y in rows"
     ng-init="show=y % 2 == 0"
