Add logic to set opacity as function of available participants.

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -61,14 +61,7 @@
 <hr class="event-horizen">
 <div class="heatmap-area">
   <h2>みんなの予定</h2>
-<!--   <div class="overnavi">
-    <div class="overnavi-left"></div>
-    <div class="overnavi-right"></div>
-  </div>
-  <div class="heatmap">
-    <img src="images/sample-heatmap.png">
-  </div> -->
-  <select-time selection-target="availabilities">
+  <select-time selection-target="availabilities" class="heat-map">
   </select-time>
   <p class="help-mydates">* 橙色の枠部分は自分が参加できる日時です。</p>
   <p class="help-select">* 色のついたボックスを選択すると、その日時に参加できる人が表示されます。</p>
