--- a/app/partials/desktop/select-time/table-content.html
+++ b/app/partials/desktop/select-time/table-content.html
@@ -12,6 +12,7 @@
       ng-class="{'time-label': show, hidden: dates.length == 0}"
       ng-bind="{true: (y|timeFromIndex), false: ''}[show]"></td>
   <td class="cell time-cell selected-{{isSelected(x, y)}}"
+      style="opacity: {{getOpacity(x, y)}}"
       ng-repeat="x in daysIndexes"
       ng-class="{hidden: x >= dates.length, opened: isOpened(x, y)}">
   </td>
