Update HTML and CSS to display heatmap.

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -61,8 +61,8 @@
 <hr class="event-horizen">
 <div class="heatmap-area">
   <h2>みんなの予定</h2>
-  <select-time selection-target="availabilities" class="heat-map">
-  </select-time>
+  <div select-time selection-target="availabilities" class="heat-map">
+  </div>
   <p class="help-mydates">* 橙色の枠部分は自分が参加できる日時です。</p>
   <p class="help-select">* 色のついたボックスを選択すると、その日時に参加できる人が表示されます。</p>
 </div>
