Add tweet button.

--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -913,7 +913,7 @@ hr {
       margin-left: 10px;
       width:68px;
       height: 20px;
-      background: image-url("desktop/btn-mail.png") no-repeat;
+      // background: image-url("desktop/btn-mail.png") no-repeat;
     }
     .share-facebook {
       float: left;
