--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -100,8 +100,12 @@
     <div class="share-mail">
       <p>メール</p>
     </div>
+
     <div class="share-twitter">
-      <img src="images/desktop/btn-mail.png" alt="">
+      <a href="https://twitter.com/intent/tweet" class="twitter-mention-button" data-lang="en" data-text="新しいイベントを作成しました。{{event.getUrl()}}">Tweet</a>
+
+
+      <!-- <img src="images/desktop/btn-mail.png" alt=""> -->
     </div>
     <div class="share-facebook">
       <img src="images/desktop/btn-mail.png" alt="">
@@ -111,3 +115,4 @@
     </div>
   </div>
 </div>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
