Add functionality to check available users.

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -50,7 +50,7 @@
         >
           {{participant.name}}
           <a href="javascript:void(0)" fast-click="openAvailabilites(participant)" class="edit" ng-show="selectedUser == participant">
-            edit
+            編集
           </a>
         </li>
       </ul>
@@ -66,25 +66,10 @@
   </ng-switch>
   <div select-time selection-target="availabilities" class="heat-map">
   </div>
-  <p class="help-mydates">* 橙色の枠部分は自分が参加できる日時です。</p>
+  <!-- <p class="help-mydates">* 橙色の枠部分は自分が参加できる日時です。</p> -->
   <p class="help-select">* 色のついたボックスを選択すると、その日時に参加できる人が表示されます。</p>
 </div>
 <hr class="event-horizen">
-<!-- <div class="area-selected">
-  <div class="area-selected-info">
-    <ul>
-      <li>Daniel Perez</li>
-      <li>はじぴょん</li>
-      <li>そねお</li>
-      <li>さそー</li>
-      <li>くわこ</li>
-    </ul>
-    <div class="btn-decide-day">
-      <p>開催日時に決定！</p>
-    </div>
-  </div>
-  <div class="area-selected-close"></div>
-</div> -->
 <div class="organizer-area">
   <h2>主催者の方へ</h2>
   <div class="share-box-left">
