--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -754,8 +754,8 @@ hr {
 
 .area-selected {
   position: absolute;
-  top: 810px;
-  left: 500px;
+  // top: 810px;
+  // left: 500px;
   z-index: 9999;
   .area-selected-info {
     position: relative;
