--- a/app/partials/desktop/events/availabilities-modal.html
+++ b/app/partials/desktop/events/availabilities-modal.html
@@ -29,6 +29,6 @@
   </select-time>
 
   <a href="javascript:void(0)" class="close"></a>
-  <a href="javascript:void(0)" class="save" fast-click="saveAvailabities()" ng-class="{disabled: saving}">完了</a>
+  <a href="javascript:void(0)" class="save" fast-click="saveAvailabilities()" ng-class="{disabled: saving}">完了</a>
 
 </div>
