--- a/app/partials/desktop/select-time/table-content.html
+++ b/app/partials/desktop/select-time/table-content.html
@@ -16,6 +16,7 @@
         ng-bind="{true: (y|timeFromIndex), false: ''}[show]"></td>
     <td class="cell time-cell alpha-{{getOpacity(x, y)}}"
         ng-repeat="x in daysIndexes"
+        fast-click="showUsers($event, x, y)"
         ng-class="{hidden: x >= dates.length, opened: isOpened(x, y), selectable: selectable, selected: isSelected(x, y)}">
     </td>
   </tr>
