Make input easily selectable.

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -76,7 +76,7 @@
     <div class="share-h">
       <p>下記URLをコピーして参加者に共有してください。</p>
     </div>
-    <input class="share-url" type="text" value="{{event.getUrl()}}" readonly="readonly">
+    <input class="share-url" selectable-input type="text" value="{{event.getUrl()}}" readonly="readonly">
     <div class="btn-copy">
       <p>コピー?</p>
     </div>
