--- a/app/partials/desktop/events/availabilities-modal.html
+++ b/app/partials/desktop/events/availabilities-modal.html
@@ -12,7 +12,7 @@
       </th>
       <td>
         <input type="text" id="name" ng-model="user.name">
-        <div class="error">名前を入力してください</div>
+        <!-- <div class="error">名前を入力してください</div> -->
       </td>
     </tr>
     <tr>
@@ -23,7 +23,7 @@
       </th>
       <td>
         <input type="password" id="password" ng-model="user.password">
-        <div class="error">パスワードを入力してください</div>
+        <!-- <div class="error">パスワードを入力してください</div> -->
       </td>
     </tr>
   </table>
