--- a/app/partials/desktop/select-time/table-content.html
+++ b/app/partials/desktop/select-time/table-content.html
@@ -2,7 +2,9 @@
   <tr class="days-of-week">
     <td></td>
     <td ng-repeat="dateInfo in dates">
-      {{ dateInfo.date | date:'MM/d（EEE曜）' }}
+      {{ dateInfo.date | date:'MM/d' }}
+      <br>
+      {{ dateInfo.date | date: '（EEE曜）' }}
     </td>
   </tr>
 </thead>
