--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -72,28 +72,34 @@
       <p>下記URLをコピーして参加者に共有してください。</p>
     </div>
     <input class="share-url" selectable-input type="text" value="{{event.getUrl()}}" readonly="readonly">
-    <div class="btn-copy">
+<!--     <div class="btn-copy">
       <p>コピー?</p>
     </div>
     <div id="copy-confirm">
       Copied!
     </div>
-  </div>
+ -->  </div>
   <div class="share-box-right">
-    <div class="share-mail">
+<!--     <div class="share-mail">
       <p>メール</p>
     </div>
-
+ -->
     <div class="share-twitter">
       <a href="https://twitter.com/intent/tweet" class="twitter-mention-button" data-lang="en" data-text="新しいイベントを作成しました。{{event.getUrl()}}">Tweet</a>
-      <!-- <img src="images/desktop/btn-mail.png" alt=""> -->
     </div>
-    <div class="share-facebook">
-      <img src="images/desktop/btn-mail.png" alt="">
-    </div>
-    <div class="delete-event">
+<!--     <div class="share-facebook">
+      <div class="fb-send" data-href="{{event.getUrl()}}" data-width="64px" data-height="32px" data-colorscheme="light"></div>
+    </div> -->
+<!--     <div class="delete-event">
       <p><a href="">このイベントを削除する</a></p>
-    </div>
+    </div> -->
   </div>
 </div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=218831004960391";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
