--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -920,7 +920,7 @@ hr {
       margin-left: 10px;
       width:68px;
       height: 20px;
-      background: image-url("desktop/btn-mail.png") no-repeat;
+      // background: image-url("desktop/btn-mail.png") no-repeat;
     }
     .delete-event {
       margin-top: 50px;
