Fix calendar thead to show days of week.

--- a/app/partials/desktop/calendar/body.html
+++ b/app/partials/desktop/calendar/body.html
@@ -1,7 +1,7 @@
 <table>
   <thead>
     <tr>
-      <td ng-repeat="day in daysOfWeek">{{day}}</td>
+      <td ng-repeat="day in calendar.weeks[0]">{{day|date: 'EEE'}}</td>
     </tr>
   </thead>
   <tbody>
