delete character 「曜」 on table of time-selection

--- a/app/partials/desktop/select-time/table-content.html
+++ b/app/partials/desktop/select-time/table-content.html
@@ -4,7 +4,7 @@
     <td ng-repeat="dateInfo in dates">
       {{ dateInfo.date | date:'MM/d' }}
       <br>
-      {{ dateInfo.date | date: '（EEE曜）' }}
+      {{ dateInfo.date | date: '（EEE）' }}
     </td>
   </tr>
 </thead>
