--- a/app/partials/mobile/select-time/main.html
+++ b/app/partials/mobile/select-time/main.html
@@ -7,7 +7,7 @@
       <tr class="days-of-week">
         <td></td>
         <td ng-repeat="dateInfo in dates">
-          {{ dateInfo.date | date:'MM/d（EEE曜）' }}
+          {{ dateInfo.date | date:'MM/d（EEE）' }}
         </td>
       </tr>
     </thead>
