--- a/app/styles/partials/_calendar.scss
+++ b/app/styles/partials/_calendar.scss
@@ -15,7 +15,7 @@
 
 .current-month-title {
   position: absolute;
-  top: 15px;
+  top: 12px;
   left: 50%;
   margin-left: -53px;
   font-size: 22px;
@@ -25,9 +25,9 @@
   width: 16px;
   height: 25px;
   float: left;
-  margin-top: 15px;
+  margin-top: 12px;
   margin-left: 15px;
-  margin-bottom: 30px;
+  margin-bottom: 13px;
   background: image-url("common/cal-arrow-left.png") no-repeat;
   background-size: 16px;
   background-position: top left;
@@ -40,9 +40,9 @@
   width: 16px;
   height: 25px;
   float: right;
-  margin-top: 15px;
+  margin-top: 12px;
   margin-right: 15px;
-  margin-bottom: 30px;
+  margin-bottom: 13px;
   background: image-url("common/cal-arrow-right.png") no-repeat;
   background-size: 16px;
   background-position: top right;
@@ -54,7 +54,7 @@
 
 .calendar-toolbar {
   width: 100%;
-  height: 50px;
+  height: 30px;
   text-align: center;
   position: relative;
 }
@@ -77,6 +77,14 @@
     margin-left: 1px;
     background: image-url("common/back-green-sub.png");
     thead {
+      background: image-url("common/back-green-main.png");
+      tr {
+        td {
+          text-align: center;
+          font-size: 16px;
+          padding-bottom: 7px;
+        }
+      }
     }
     tbody {
       td {
@@ -85,14 +93,17 @@
         font-size: 19px;
         font-weight: bold;
         text-align: center;
-        padding-top: 8px;
-        padding-bottom: 8px;
+        padding-top: 6px;
+        padding-bottom: 6px;
+        cursor: pointer;
         &.selected {
           color: white;
         }
       }
       .past {
+        background: #999;
         color: #AAA;
+        cursor: default;
         &.selected {
           color: #CCC;
         }
