Delete waste images

--- a/app/styles/partials/_create-event.scss
+++ b/app/styles/partials/_create-event.scss
@@ -69,7 +69,7 @@
   width:260px;
   height:21px;
   margin: 10px auto;
-  background: image-url("tab_off.png")no-repeat;
+  background: image-url("mobile/tab_off.png")no-repeat;
   background-size: 260px 21px;
   position: relative;
   img {
