Optimized the letter on create-event

--- a/app/partials/desktop/create-event/creation.html
+++ b/app/partials/desktop/create-event/creation.html
@@ -46,8 +46,8 @@
     </tr>
   </table>
   <div class="book-right">
-    <span><small>*</small>所要時間</span>
-    <div class="error er-event-dates" ng-hide="calendar.hasSelectedDates() || calendar.pristine">イベント名を入力してください</div>
+    <span><small>*</small>日程選択</span>
+    <div class="error er-event-dates" ng-hide="calendar.hasSelectedDates() || calendar.pristine">日程を選択してください</div>
     <calendar toggable="true" allow-past-dates="false">
     </calendar>
   </div>
