--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -3,7 +3,7 @@
   @media only screen and (min-width: 760px) {
     width: 800px;
   }
-  margin-top:20px;
+  margin-top:10px;
   margin-left: auto;
   margin-right: auto;
   padding-right: 40px;
@@ -44,6 +44,8 @@
         padding-top: 10px;
         padding-bottom: 10px;
         font-size: 16px;
+        letter-spacing: 0.1em;
+        line-height: 1.3em;
         background-color: inherit;
       }
     }
