Add eraser cursor.

--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -18,6 +18,7 @@
       }
       &.selected {
         background: $selected-cell-color;
+        cursor: image-url("desktop/pointer-eraser.png"), default;
       }
     }
   }
