--- a/app/partials/desktop/create-event/confirmation.html
+++ b/app/partials/desktop/create-event/confirmation.html
@@ -69,14 +69,14 @@
   </div>
   <div class="share-box-right">
 <!--     <div class="share-mail">
-      <p>メール</p>
-    </div> -->
-    <div class="share-twitter">
-      <a href="https://twitter.com/intent/tweet" class="twitter-mention-button" data-lang="en" data-text="新しいイベントを作成しました。{{event.getUrl()}}">Tweet</a>
-    </div>
-<!--     <div class="share-facebook">
       <img src="images/desktop/btn-mail.png" alt="">
     </div> -->
+    <div class="share-twitter">
+      <a href="https://twitter.com/intent/tweet" class="twitter-mention-button" data-lang="ja" data-text="イベントを作成しました！参加者は予定入力をお願いします(^-^) {{event.getUrl()}}">ツイッターで送る</a>
+    </div>
+    <div class="share-facebook">
+      <div class="fb-send" data-href="{{event.getUrl()}}" data-width="64px" data-height="32px" data-colorscheme="light"></div>
+    </div>
   </div>
 </div>
 
