fixed share-button on events page

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -85,11 +85,11 @@
     </div>
  -->
     <div class="share-twitter">
-      <a href="https://twitter.com/intent/tweet" class="twitter-mention-button" data-lang="en" data-text="新しいイベントを作成しました。{{event.getUrl()}}">Tweet</a>
+      <a href="https://twitter.com/intent/tweet" class="twitter-mention-button" data-lang="ja" data-text="イベントを作成しました！参加者は予定入力をお願いします(^-^) {{event.getUrl()}}">ツイッターで送る</a>
     </div>
-<!--     <div class="share-facebook">
+    <div class="share-facebook">
       <div class="fb-send" data-href="{{event.getUrl()}}" data-width="64px" data-height="32px" data-colorscheme="light"></div>
-    </div> -->
+    </div>
 <!--     <div class="delete-event">
       <p><a href="">このイベントを削除する</a></p>
     </div> -->
