Modified CSS for h2 of heatmap-area

--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -707,9 +707,10 @@ hr {
     width: 220px;
     margin-left: 330px;
     background: image-url("common/logo-symbol.png") no-repeat;
-    padding-bottom: 3px;
+    padding-bottom: 2px;
     font-size: 25px;
-    text-align: center;
+    text-align: left;
+    padding-left: 32px;
   }
   .overnavi {
     position: relative;
