--- a/app/styles/partials/_modal.scss
+++ b/app/styles/partials/_modal.scss
@@ -45,9 +45,7 @@
     border-top: 2px dotted $main-color;
   }
   table.control {
-    width: 440px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 270px;
     tr {
       th {
         padding-top: 20px;
