--- a/app/styles/partials/_modal.scss
+++ b/app/styles/partials/_modal.scss
@@ -83,6 +83,8 @@
     display: block;
     width: 200px;
     height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
     background: $main-color;
