fix CSS of share-box

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -67,7 +67,7 @@
 <hr class="event-horizen">
 <div class="organizer-area">
   <h2>主催者の方へ</h2>
-  <div class="share-box-left">
+  <div class="share-box-top">
     <div class="share-h">
       <p>下記URLをコピーして参加者に共有してください。</p>
     </div>
@@ -79,7 +79,7 @@
       Copied!
     </div>
  -->  </div>
-  <div class="share-box-right">
+  <div class="share-box-bottom">
 <!--     <div class="share-mail">
       <p>メール</p>
     </div>
