--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -841,14 +841,13 @@ hr {
     font-size: 25px;
     text-align: center;
   }
-  .share-box-left {
+  .share-box-top {
     position: relative;
     width: 590px;
     height: auto;
-    float: left;
     background: #CCCCCC;
     margin-top: 20px;
-    margin-left: 40px;
+    margin-left: 130px;
     padding-top: 5px;
     padding-bottom: 5px;
     .share-h {
@@ -890,9 +889,9 @@ hr {
 
     }
   }
-  .share-box-right {
-    float: left;
+  .share-box-bottom {
     margin-top: 30px;
+    margin-left: 290px;
     .share-mail {
       margin-left: 20px;
       float: left;
